<resources>
    <string name="app_name">Alkitab GPT</string>
    <string name="menu_app_name"><font size="20">Alkitab GPT</font></string>

    <!-- TextView, Button, View Purpose -->
    <string name="deskripsi"><b>Alkitab GPT (Bible Man)</b> adalah teknologi AI yang dirancang untuk menjadi <b>alat</b>, <b>asisten</b>, <b>teman</b> dalam melakukan <b>studi Alkitab</b> bagi tubuh Kristus di Indonesia untuk mendapatkan pengalaman <u>studi Alkitab</u> yang fun, mendalam, bertanggung jawab, dan relevan.</string>
    <string name="cobasekarang">Coba Sekarang</string>
    <string name="chat">Chat</string>
    <string name="pelajari_lebih_lanjut">Pelajari AI dan Alkitab lebih lanjut</string>
    <string name="pelajari_lebih"><font size="20">Pelajari AI dan Alkitab</font></string>
    <string name="ai_squared">AI Squared</string>
    <string name="f_o_k_u_s">F\.O\.K\.U\.S\.</string>
    <string name="coba_pa_dengan_ai">Coba PA dengan AI</string>
    <string name="close_app">Apakah Anda ingin keluar aplikasi?</string>
    <string name="tidak">Tidak</string>
    <string name="iya">Ya</string>
    <string name="prompt">Ketik prompt anda di sini</string>
    <string name="kuy">Coba PA dengan AI sekarang!</string>
    <string name="video">Video</string>
    <string name="pdf">PPT</string>
    <string name="send">button to send prompt</string>
    <string name="close">close</string>
    <string name="tentang"><font size="20">Tentang</font></string>
    <string name="version">version: %s</string>
    <string name="tentang_panjang">
        Aplikasi \"Alkitab GPT\" adalah aplikasi Android yang dikembangkan oleh Yayasan Lembaga SABDA (YLSA) sebagai teknologi yang memungkinkan pengguna untuk melakukan studi Alkitab dengan memanfaatkan teknologi AI.\n\nAlkitab GPT telah melalui proses pelatihan intensive dengan menggunakan ratusan dataset SABDA Bot, versi-versi Alkitab, dan sumber-sumber kekristenan lainnya agar Alkitab GPT memberikan hasil yang sesuai dengan konteks Alkitab dan tidak ambigu.
    </string>
    <string name="sabda_apps">:: SABDA Apps ::</string>
    <string name="thx">Terima kasih kepada semua mitra/teman\n pelayanan yang terlibat</string>
    <string name="kotaksaran">:: Kontak untuk Saran/Komentar ::</string>
    <string name="tgbtg">To God be the Glory!</string>
    <string name="free">… freely ye have received,\n freely give. (Mat 10:8)</string>
    <string name="toast_offline">Maaf, aplikasi hanya bisa\n diakses secara <i>online</i>\n tolong sambungkan perangkat Anda dengan internet</string>
    <string name="cc">%d</string>

    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tincidunt turpis in risus egestas, </string>
    <string name="resources">Resources</string>
    <string name="kembali">Kembali</string>
    <string name="situs">Situs: Alkitab GPT</string>
    <string name="situs2"><font size="20"><b>Situs</b></font></string>
    <string name="aplikasi_5"><font size="20"><b>Aplikasi SABDA</b></font></string>
    <string name="alkitab">Alkitab</string>
    <string name="alkipedia">AlkiPEDIA</string>
    <string name="tafsiran">Tafsiran</string>
    <string name="kamus_alkitab">Kamus Alkitab</string>
    <string name="bot">SABDA Bot</string>
    <string name="lain">Lain-lain</string>
    <string name="studi_alkitab">Studi Alkitab</string>
    <string name="alkitab_media">Media Alkitab</string>
    <string name="komunitas">Komunitas</string>
    <string name="ai4cg">AI-4-Church &amp; AI-4-GOD</string>
    <string name="situs_ai">Situs: AI</string>
    <string name="release_note"><font size="20">Release Notes</font></string>
    <string name="message_release_notes">Alkitab GPT (3.0-beta-4)*\n- Optimasi Fitur Chatbox\n- Relayouting materi</string>
    <string name="openai">OpenAI</string>
    <string name="wa_chatgpt">WA: ChatGPT</string>
    <string name="wa_copilot">WA: Copilot</string>
    <string name="wa_meta">WA: Meta</string>
    <string name="loading">Loading…</string>
    <string name="history">History</string>
    <string name="edit_text_for_chat">Edit Text for Chat</string>
    <string name="test">test</string>

    <!-- Links -->
    <string name="kotaksaran_link"><u>apps@sabda.org</u></string>
    <string name="sabda_apps_link"><u>https://sabda.app</u></string>

    <!--Q&A-->
    <string name="question_and_answer"><font size="20"><![CDATA[Question & Answer]]></font></string>
    <string name="question1">T: Apa itu Alkitab GPT?</string>
    <string name="question2">T: Mengapa saya diarahkan ke ChatGPT di OpenAI saat mencoba mengakses Alkitab GPT?</string>
    <string name="question3">T: Apa perbedaan Alkitab GPT dengan ChatGPT biasa?</string>
    <string name="question4">T: Apakah Alkitab GPT telah dilatih untuk memberikan jawaban?</string>
    <string name="question5">T: Apakah Alkitab GPT berbayar?</string>
    <string name="question6">T: Apa perbedaan menggunakan Alkitab GPT yang gratis dengan Alkitab GPT yang dibuka dengan akun GPT Plus?</string>
    <string name="question7">T: Apakah Alkitab GPT bisa menggantikan studi Alkitab tradisional?</string>
    <string name="question8">T: Apakah hasil jawaban dari Alkitab GPT perlu dicek kembali dengan referensi-referensi lainnya?</string>
    <string name="question9">T: Apakah hasil generate dari Alkitab GPT bisa dipertanggungjawabkan kebenarannya?</string>
    <string name="question10">T: Apakah Alkitab GPT bisa melakukan generate gambar?</string>
    <string name="question11">T: Di mana Aplikasi Alkitab GPT ini bisa diakses?</string>
    <string name="question12">T: Di mana saya bisa mendapatkan tutorial menggunakan Alkitab GPT?</string>
    <string name="question13">T: Apakah informasi Alkitab GPT ini bisa dibagikan kepada siapa pun?</string>
    <string name="question14">T: Bagaimana gereja/komunitas saya bisa mendapatkan pelatihan tentang penggunaan Alkitab GPT untuk belajar Alkitab?</string>
    <string name="question15">T: Apakah ke depannya Alkitab ini akan terus di-update?</string>
    <string name="answer1">J: Alkitab GPT adalah teknologi AI yang dirancang khusus untuk membantu umat kristiani di Indonesia dalam studi Alkitab. Melalui Alkitab GPT, kita bisa mendapatkan pengalaman belajar yang menyenangkan, mendalam, bertanggung jawab, dan relevan.</string>
    <string name="answer2">J: Alkitab GPT beroperasi di platform ChatGPT OpenAI dan didukung oleh GPT Plus (GPT-4, GPT-4o, Dall-e 3), sehingga pengguna diarahkan ke platform tersebut untuk mengakses Alkitab GPT.</string>
    <string name="answer3">J: Alkitab GPT dirancang untuk memberikan jawaban yang selalu berorientasi pada Alkitab, dengan setiap prompt yang diberi grounding terlebih dahulu untuk memastikan jawaban sesuai dengan prinsip-prinsip Alkitab.</string>
    <string name="answer4">J: Alkitab GPT telah melalui proses pelatihan data yang intensif menggunakan berbagai dataset Alkitab, SABDA Bot, dan bahan-bahan kekristenan lainnya.</string>
    <string name="answer5">J: Berita baiknya, Alkitab GPT bisa diakses secara gratis dengan menggunakan GPT-4o. Namun, ada beberapa fitur yang tidak tersedia dalam versi gratis, seperti generasi gambar (Dall-e 3). Meskipun begitu, Alkitab GPT yang gratis sudah sangat membantu dan efektif untuk melalui studi Alkitab.</string>
    <string name="answer6">J: Dengan akun GPT Plus, pengguna dapat mengakses versi model GPT terbaru dengan fitur canggih, tanpa batasan jumlah prompt atau respons harian, dan bisa generate image.</string>
    <string name="answer7">J: Tidak, Alkitab GPT adalah alat bantu dan tidak dapat menggantikan studi Alkitab tradisional, tetapi dapat melengkapinya.</string>
    <string name="answer8">J: Ya. Meskipun Alkitab GPT dirancang untuk memberikan jawaban yang akurat dan dapat dipercaya, selalu bijaksana untuk memeriksa kembali hasil jawaban dengan referensi-referensi lainnya.</string>
    <string name="answer9">J: Bisa. Karena Alkitab GPT sudah melalui proses training supaya jawaban yang berikan selalu berorientasi pada Alkitab.</string>
    <string name="answer10">J: Generate gambar hanya bisa dilakukan apabila menggunakan akun GPT Plus.</string>
    <string name="answer11">J: Alkitab GPT ini dapat diakses melalui mobile (Android) dan web https://gpt.sabda.org/ .</string>
    <string name="answer12">J: Silakan dapatkan tutorial menggunakan Alkitab GPT melalui Situs https://gpt.sabda.org/ dan media sosial [Instagram @ayo_pa].</string>
    <string name="answer13">J: Tentu. Informasi ini dapat dibagikan kepada siapa pun supaya setiap anak Tuhan dapat menggunakannya sebagai salah satu referensi untuk studi Alkitab.</string>
    <string name="answer14">J: Silakan kontak Yayasan Lembaga SABDA melalui WA: 08812979100 atau email di ylsa@sabda.org .</string>
    <string name="answer15">J: Ya. Aplikasi ini akan terus di-update/dikembangkan oleh Yayasan Lembaga SABDA.</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logo">logo</string>
    <string name="home">Home</string>
    <string name="ai">AI</string>

    <!--Title Artikel-->
    <string name="aidanalkitab">Seminar: AI &amp; Alkitab</string>
    <string name="alkitab_gpt">Seminar: Alkitab GPT</string>
    <string name="metode_ai_squared">Metode AI Squared</string>
    <string name="metode_f_o_k_u_s">Metode F\.O\.K\.U\.S\.</string>
    <string name="bible_gpt">Bible + GPT</string>
    <string name="deskripsi_tidak_tersedia">Deskripsi tidak tersedia untuk artikel ini.</string>

    <!--Teks Artikel-->
    <string name="teksartikelaidanalkitab">Secara pasti, AI telah memberi dampak yang sangat luas dalam pelayanan Kristen, termasuk terhadap Alkitab. Mari kita berbincang-bincang mengenai dampak AI seputar terjemahan, distribusi, dan penggunaan Alkitab di #AITalks: “AI dan Alkitab”.</string>
    <string name="teksartikelalkitab_gpt">SABDA mengundang Teman-teman semua untuk berkenalan dengan "Alkitab GPT atau Bible Man". Apa itu Alkitab GPT? Apa keistimewaannya? Gimana cara pakainya? Nah, penasaran kan? Yuk, bergabung dalam acara seri #AITalks: Go-AI! "Alkitab GPT (Bible Man)", cara baru untuk belajar/studi Alkitab.</string>
    <string name="teksartikelmetode_ai_squared">Tahun baru 2024 akan lanjut membawa perubahan, terkhusus dengan penetrasi teknologi AI yang semakin meluas di semua bidang kehidupan. Bagaimana dengan cara kita mempelajari Alkitab? SABDA mengajak Sahabat SABDA untuk belajar cara baru yang fun dan menarik dalam melakukan PA. Untuk itu, mari bergabung dalam acara seri go-AI! yang berjudul "PA dengan AI: Cara AI2 (AI Squared)".</string>
    <string name="teksartikelmetode_f_o_k_u_s">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tincidunt turpis in risus egestas,</string>
    <string name="teksartikelbible_gpt">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed tincidunt turpis in risus egestas,</string>

    <!--Alert Text & Title-->
    <string name="prompt_minus">Masukkan prompt minimal 5 karakter</string>
    <string name="prompt_plus">Maksimal 250 karakter</string>
    <string name="no_response">AI tidak memberikan jawaban. Silakan coba lagi dalam beberapa saat.</string>
    <string name="no_response_title">Tidak ada respon</string>
    <string name="hint">Masukkan Prompt di sini</string>
    <string name="no_response2">⚠️ AI tidak memberikan respon. Coba lagi nanti.</string>
    <string name="timeout_error">⏰ Timeout: AI tidak merespon. Coba kirim ulang.</string>
    <string name="no_response3">❌ Terjadi kesalahan saat menghubungi AI.❌ Terjadi kesalahan saat menghubungi AI.</string>

    <!-- Preview Text -->
    <string name="dialog_title_delete">Hapus Chat</string>
    <string name="dialog_message_delete">Apakah Anda yakin ingin menghapus chat ini?</string>
    <string name="dialog_yes">Ya</string>
    <string name="dialog_no">Tidak</string>



</resources>
