<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/logoalkitabgpt"
        android:layout_marginTop="5dp"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:id="@+id/kuy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kuy"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"/>

        <RelativeLayout
            android:id="@+id/relative"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal">

            <EditText
                android:id="@+id/input"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:hint="@string/prompt"
                android:textColor="@color/black"
                android:textColorHint="#524E4E"
                android:backgroundTint="#082147"
                android:inputType="textMultiLine"
                android:scrollHorizontally="false"
                android:maxLines="5"
                android:layout_centerVertical="true"/>

            <TextView
                android:id="@+id/characterCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cc"
                android:textColor="@color/grey"
                android:layout_marginStart="10dp"
                android:layout_toEndOf="@id/input"
                android:layout_centerVertical="true"/>

            <ImageView
                android:id="@+id/option"
                android:layout_width="30dp"
                android:layout_height="50dp"
                android:src="@drawable/baseline_keyboard_arrow_down_24"
                android:layout_toEndOf="@id/characterCount"
                android:layout_centerVertical="true"/>

            <ImageButton
                android:id="@+id/send"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:backgroundTint="#082147"
                android:contentDescription="@string/send"
                android:src="@drawable/arrow_send"
                android:layout_toEndOf="@id/option"
                android:layout_centerVertical="true"/>

        </RelativeLayout>

        <TextView
            android:id="@+id/source"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:layout_gravity="center_horizontal"/>

        <View
            android:id="@+id/view"
            android:layout_width="300dp"
            android:layout_height="2dp"
            android:background="@drawable/rounded_corner"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"/>

        <Button
            android:id="@+id/alkitabGPT"
            android:layout_width="300dp"
            android:layout_height="60dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/app_name"
            android:backgroundTint="#082147"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"/>

        <View
            android:id="@+id/view2"
            android:layout_width="300dp"
            android:layout_height="2dp"
            android:background="@drawable/rounded_corner"
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"/>

        <TextView
            android:id="@+id/Resources"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resources"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:layout_gravity="center_horizontal"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/horizontalRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:padding="16dp"/>

    </LinearLayout>

</ScrollView>