<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ChatActivity">

    <androidx.drawerlayout.widget.DrawerLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/historyImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/history"
                android:src="@drawable/notes"
                android:layout_margin="10dp"/>

            <TextView
                android:id="@+id/chatTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textColor="@color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                android:layout_margin="12dp"
                android:layout_toEndOf="@id/historyImageView"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_below="@id/chatTextView"
                android:layout_above="@id/inputEditText"/>

            <EditText
                android:id="@+id/inputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_toStartOf="@id/send"
                android:hint="@string/prompt"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="10dp"/>



            <ImageButton
                android:id="@+id/send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#082147"
                android:contentDescription="@string/send"
                android:src="@drawable/arrow_send"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"/>

        </RelativeLayout>

        <com.google.android.material.navigation.NavigationView
            android:id="@+id/navigationView"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:fitsSystemWindows="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/titleHistory"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/history"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:gravity="center_vertical"
                    android:paddingBottom="10dp"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerViewPreview"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="9"/>

            </LinearLayout>

        </com.google.android.material.navigation.NavigationView>

    </androidx.drawerlayout.widget.DrawerLayout>

</FrameLayout>